[package]
name = "shared"
description = "Shared components used in Synota applications"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
hex = "0.4.3"
sharks = "0.5.0"
aes-gcm = "0.10.1"
sha2 = "0.10.6"
rand = "0.8.4"

serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"

base64 = "0.13.0"
anyhow = "1.0.65"
